--- a/.github/workflows/publish-on-tag.yml
+++ b/.github/workflows/publish-on-tag.yml
@@ -48,4 +48,8 @@ jobs:
     uses: ./.github/workflows/release-grafana-plugin.yml
     with:
       tag: ${{ github.ref_name }}
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
     secrets: inherit
