fix(ci): set default docs version to latest to fix root 404

--- a/.github/workflows/docs-release.yml
+++ b/.github/workflows/docs-release.yml
@@ -42,3 +42,4 @@ jobs:
         run: |
           VERSION="${{ github.event.release.tag_name }}"
           mike deploy --push --update-aliases "${VERSION}" latest
+          mike set-default --push latest
