--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -77,6 +77,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -92,6 +95,7 @@ jobs:
           target: runner
           build-args: |
             SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.PYTHON_VERSION }}
+          platforms: linux/amd64,linux/arm64
           tags: ${{ env.RUNNER_TAGS }}
           push: true
 
@@ -103,5 +107,6 @@ jobs:
           target: api
           build-args: |
             SETUPTOOLS_SCM_PRETEND_VERSION=${{ env.PYTHON_VERSION }}
+          platforms: linux/amd64,linux/arm64
           tags: ${{ env.API_TAGS }}
           push: true
